moved sentiment chart into freq svg component and fixed spacing with bubble charts

--- a/public/index.css
+++ b/public/index.css
@@ -49,7 +49,7 @@
 .freq, .call-duration {
     margin-left: auto;
     margin-right: auto;
-    display: inline; 
+    display: block; 
     margin-top: 60px;
 }
 .legend-received-rect {
